Fix: centered header text-alignment

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ fieldset {
   border-color: none;
 }
 
+header {
+  text-align: center;
+}
+
 .container {
   width: 80%;
   margin-left: auto;
